<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Don't remove the APP_NAME comments. They are used by the build script. -->
    <!-- APP_NAME --><string name="app_name">CometChat</string><!-- APP_NAME_END -->
    <!-- DEEP_LINK -->
    <string name="deep_link_url"></string><!-- DEEP_LINK_END -->
    <!-- DEEP_LINK_SCHEMA -->
    <string name="deep_link_schema"></string><!-- DEEP_LINK_SCHEMA_END -->
    <string name="action_settings">Settings</string>
    <string name="splash_content_description">Splash Screen Logo</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="bot_hint">Bot Name</string>
    <string name="remember_me_text">Remember me</string>
    <string name="login_button_text">Log in</string>
    <string name="url_field_text">Website URL</string>
    <string name="action_search">Search</string>
    <string name="action_invite">Invite</string>
    <string name="activity_profile_title">Profile</string>
    <string name="title_activity_chat">Chat</string>
    <string name="logout_button_text">Logout</string>
    <string name="no_users_available">No users online at the moment.</string>
    <string name="no_chatrooms_available">No Chatrooms Available.</string>
    <string name="no_bots_available">No Bots Available.</string>
    <string name="sender_name">SenderName</string>
    <string name="dialogue_default_title">Title</string>
    <string name="dialogue_default_hint">Hint</string>
    <string name="clear_conversation">Clear conversation</string>
    <string name="report_conversation">Report conversation</string>
    <string name="title_activity_video_chat">VideoChatActivity</string>
    <string name="call">Call</string>
    <string name="more">More</string>
    <string name="title_activity_video_chat_popup">VideoChatPopupActivity</string>
    <string name="incoming_call">Incoming call..</string>
    <string name="title_activity_outgoing_call">OutgoingCallActivity</string>
    <string name="calling_user">Calling..</string>
    <string name="message">Message</string>
    <string name="time_stamp">TimeStamp</string>
    <string name="name_text">Name</string>
    <string name="status_message">Status message</string>
    <string name="phone_number">Phone Number</string>
    <string name="leave_chatroom">Leave Chatroom</string>
    <string name="invite_users">Invite Users</string>
    <string name="color_your_text">Color Yout Text</string>
    <string name="profile_title">Profile</string>
    <string name="title_update_status">New Status</string>
    <string name="avatar_changed_success">Avatar changed</string>
    <string name="avatar_changed_failure">Can\'t change avatar. Please try again</string>

    <string name="invite_users_button_text">Invite Phone Contacts</string>
    <string name="set_status_message_button_text">Edit Status Message</string>
    <string name="set_status_button_text">Set Status</string>
    <string name="image_preview">Image preview</string>
    <string name="unread_count">0</string>
    <string name="chatroom_name">Chatroom Name</string>
    <string name="users_online">Users Online: </string>
    <string name="invite">Invite</string>
    <string name="invite_label">To: </string>
    <string name="cancel_invite_users">Cancel</string>
    <string name="create_chatroom">Create Chatroom</string>
    <string name="create">CREATE</string>
    <string name="register_user_link_text">Register</string>
    <string name="readmore">Read more</string>
    <string name="block_user">Block user</string>
    <string name="unblock_user">Unblock user</string>
    <string name="unblock_button_text">Unblock</string>
    <string name="no_blocked_users">No blocked users</string>
    <string name="title_activity_unblockuser">UnblockuserActivity</string>
    <string name="title_activity_invite_via_sms">Invite Your Friends</string>
    <string name="default_status_message">I\'m Available</string>
    <string name="change_language">Translate Conversations</string>
    <string name="title_activity_verficiation">Verify your number</string>
    <string name="title_activity_createProfile">Create Profile</string>

    <string name="title_activity_select_country">Select Country</string>
    <string name="title_change_profile_hint">(Tap to change your picture)</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="set_user_name_button_text">Edit Username</string>
    <string name="refresh_list">Refresh list</string>
    <string name="emoji_size_actual">100</string>
    <string name="share_app_button_text">Share This App</string>
    <string name="chat_settings_text">Chat Settings</string>
    <string name="Read_receipt_settings_text">Read receipt settings</string>
    <string name="Last_seen_settings_text">Last seen setting</string>
    <string name="Notification_setting_text">Notification settings</string>
    <string name="title_activity_show_chatroom_users">Chatroom users</string>
    <string name="title_activity_view_user_profile">View Profile</string>
    <string name="title_activity_url_initializer">Enter your site url</string>
    <string name="title_activity_social_auth_only">Social Auth</string>
    <string name="back">Back</string>
    <string name="title_activity_guest_login">Guest Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_notification_settings">Chat settings</string>
    <string name="title_activity_cod_login">Login</string>
    <string name="try_demo">Try a Demo</string>

    <!-- Place holder -->
    <string name="facebook_app_id">401914963349999</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_broadcast_message">Broadcast Message</string>
    <string name="title_activity_invite_avbroadcast_users">Invite Users</string>
    <string name="title_activity_whiteboard">WhiteboardActivity</string>
    <string name="title_activity_setting">More</string>
    <string name="title_activity_status_message">Status Message</string>
    <string name="title_activity_select_language">Select Language</string>
    <string name="title_activity_single_player_game">Single Player Games</string>
    <string name="search">Search&#8230;</string>
    <string name="button_description">Button</string>
    <string name="title_activity_write_board">WriteBoard</string>
    <string name="title_activity_unban_chatroom_user">Unban User</string>

    <!-- TODO: Remove or change this placeholder text -->


    //Lang Strings
    <string name="games">Games</string>
    <string name="title">Blocked Users</string>
    <string name="Translate_conversation">Language</string>
    <string name="view_profile">View Profile</string>
    <string name="title_current_status">Your current status</string>
    <string name="title_select_new_status">Select your new status</string>
    <string name="insert_default_status">INSERT INTO status (message) VALUES (\'I am available\'), (\'I am offline\'), (\'I am visible\'), (\'I am invisible\')</string>

    <!-- ids -->
    <string name="buddy_id">buddyId</string>
    <string name="chatroom_id">chatroomID</string>

</resources>