<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background">

    <Button
        android:id="@+id/buttonDemoLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:background="@drawable/logout_button_background"
        android:maxWidth="300dp"
        android:minWidth="250dp"
        android:layout_marginLeft="50dp"
        android:text="@string/login_button_text"
        android:textAllCaps="false"
        android:textColor="@color/login_button_text"
        android:visibility="visible" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_txt_url"
        android:layout_width="match_parent"
        android:theme="@style/TextLabel"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:layout_above="@id/buttonDemoLogin"
        >

        <EditText
            android:id="@+id/editTextURL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/url_field_text"
            android:inputType="textUri"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:visibility="visible" />
    </android.support.design.widget.TextInputLayout>


    <ImageView
        android:id="@+id/imageViewCometchatLogo"
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:layout_above="@id/input_layout_txt_url"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_preview"
        android:src="@drawable/logo_login" />

    <com.pnikosis.materialishprogress.ProgressWheel
        android:id="@+id/progressWheel"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@id/buttonDemoLogin"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        wheel:matProg_barColor="@color/login_button"
        wheel:matProg_progressIndeterminate="true" />

    <Button
        android:id="@+id/textViewTryDemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/login_button_alternative_selector"
        android:gravity="center"
        android:maxWidth="300dp"
        android:minWidth="250dp"
        android:padding="12dp"
        android:text="@string/try_demo"
        android:textAllCaps="false"
        android:textColor="@color/login_button"
        android:textSize="14sp" />

    <Button
        android:id="@+id/buttonCheckURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/textViewTryDemo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_button_selector"
        android:maxWidth="300dp"
        android:minWidth="250dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/login_button_text"
        android:textSize="14sp"
        android:visibility="gone"/>

</RelativeLayout>
