<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/relativeLayoutInviteUserFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="10dp"
        android:visibility="gone"
        android:weightSum="1">

        <Button
            android:id="@+id/buttonCancelInvite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight=".5"
            android:background="@drawable/login_button_alternative_selector"
            android:text="@string/cancel_invite_users"
            android:textAllCaps="false"
            android:textColor="@color/login_button_text" />

        <Button
            android:id="@+id/buttonInviteUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight=".5"
            android:background="@drawable/login_button_alternative_selector"
            android:text="@string/invite"
            android:textAllCaps="false"
            android:textColor="@color/login_button_text" />
    </LinearLayout>

    <TextView
        android:id="@+id/textviewNoUsersToInvite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:paddingRight="10dp"
        android:text="@string/no_users_available"
        android:textSize="16sp"
        android:visibility="gone" />

    <ListView
        android:id="@+id/listViewInviteUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/relativeLayoutInviteUserFooter"
        android:divider="@null"
        android:layout_alignParentTop="true"></ListView>

</RelativeLayout>