<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <ImageView
        android:id="@+id/imageViewCometchatLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="30dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_preview"
        android:maxHeight="@dimen/app_logo_height"
        android:maxWidth="@dimen/app_logo_width"
        android:src="@drawable/logo_login" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_guest_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Guest Name"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/login_text_hint"
        android:gravity="center"
        >
    <EditText
        android:id="@+id/editTextGuestName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:theme="@style/TextLabel"
        android:inputType="textCapWords"
        android:maxWidth="250dp"
        android:minWidth="200dp"
        android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>



    <Button
        android:id="@+id/buttonGuestLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/logout_button_background"
        android:text="@string/login_button_text"
        android:textAllCaps="false"
        android:textColor="@color/login_button_text" />

    <com.pnikosis.materialishprogress.ProgressWheel
        android:id="@+id/progressWheel"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="5dp"
        android:visibility="invisible"
        wheel:matProg_barColor="@color/login_button"
        wheel:matProg_progressIndeterminate="true" />

    <ImageView
        android:id="@+id/imageViewBottomBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_custom_back_arrow" />

</LinearLayout>
