<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"

    android:background="@color/tw__solid_white"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.inscripts.activities.UrlInitializerActivityNew">

    <ImageView
        android:id="@+id/imageViewCometchatLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_preview"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo_login" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_txt_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/imageViewCometchatLogo"
        android:layout_margin="30dp"
        >

        <EditText
            android:id="@+id/editTextURL"
            android:theme="@style/TextLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/url_field_text"
            android:inputType="textUri"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:visibility="visible" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/buttonDemoLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/input_layout_txt_url"
        android:background="@drawable/logout_button_background"
        android:maxWidth="200dp"
        android:minWidth="150dp"
        android:layout_marginLeft="60dp"
        android:text="@string/login_button_text"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/login_button_text"
        android:visibility="visible" />

    <com.pnikosis.materialishprogress.ProgressWheel
        android:id="@+id/progressWheel"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@id/buttonDemoLogin"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        wheel:matProg_barColor="@color/login_button"
        wheel:matProg_progressIndeterminate="true" />


    <RelativeLayout
        android:id="@+id/container_try_demo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DON'T HAVE AN ACCOUNT?"
            android:padding="20dp"
            android:textColor="#a2a2a5"
            />

        <TextView
            android:id="@+id/textViewTryDemo"
            android:layout_toRightOf="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TRY A DEMO"
            android:padding="20dp"
            android:layout_marginLeft="-30dp"

            />

    </RelativeLayout>


    <ImageView
        android:layout_alignParentBottom="true"
        android:id="@+id/ic_back_arrow"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:visibility="gone"
        android:src="@drawable/ic_back_arrow"/>

</RelativeLayout>
