<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <com.inscripts.custom.ProfileRoundedImageView
            android:id="@+id/imageViewProfileBuddyPic"
            android:layout_width="@dimen/profile_image_size"
            android:layout_height="@dimen/profile_image_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/profile_margin" />

        <TextView
            android:id="@+id/textViewProfileBuddyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/name_text"
            android:textColor="#777"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewProfileBuddyStatus"
                android:layout_width="11dp"
                android:layout_height="11dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/image_preview"
                android:src="@drawable/ic_user_available" />

            <TextView
                android:id="@+id/textViewProfileBuddyStatusMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/default_status_message"
                android:textColor="#777" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutBuddyVideoCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CCC" />

            <ImageView
                android:id="@+id/imageViewBuddyVideoCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/image_preview"
                android:padding="17dp"
                android:src="@drawable/ic_video_call" />

            <TextView
                android:id="@+id/textViewBuddyVideoCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/imageViewBuddyVideoCall"
                android:text="Video call"
                android:textColor="#777"
                android:textSize="18sp" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/relativeLayoutBuddyAudioCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#CCC" />

            <ImageView
                android:id="@+id/imageViewBuddyAudioCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/image_preview"
                android:padding="17dp"
                android:src="@drawable/ic_phone_call" />

            <TextView
                android:id="@+id/textViewBuddyAudioCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/imageViewBuddyAudioCall"
                android:text="Audiocall"
                android:textColor="#777"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>

